# higher_order_correlations_c2

./: LICENSE  README.md  pyproject.toml
data/: README.md
meta/: colorblind_friendly.mplstyle  stations_all.csv  stations_auxiliary.csv  stations_receivers.csv
notebooks/: compute_correlations.ipynb  fig1_sketch.ipynb  fig2_map.ipynb  fig3_c1_snapshots.ipynb  fig4_c2_snapshots.ipynb  fig5_source_effect.ipynb  fig6_single_auxiliary_stations.ipynb  fig7_auxiliary_station_strategy.ipynb  fig8_focal_spot_fitting.ipynb  fig9_group_velocity.ipynb
