[project]
name = "higher-order-correlation-source-effects"
description = "This repository contains all data products, metadata, and code necessary to reproduce all figures of the manuscript 'Source effects in higher-order ambient seismic field correlations' by Schippkus et al. (2025)."
version = "1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "cmcrameri>=1.9",
    "dask>=2025.5.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "pywavelets>=1.8.0",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
